--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "@mui/material": "^5.15.15",
     "@react-three/drei": "^9.105.5",
     "@react-three/fiber": "^8.16.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "animejs": "^3.2.2",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "react-typist": "^2.0.5",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
     "three": "^0.164.1"
   },
